force-app/main/default/objects/FEC_Assignment_MDS__c/FEC_Assignment_MDS__c.object-meta.xml
<CustomObject>
    <label>Assignment MDS</label>
    <nameField>
        <label>Assignment MDS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments MDS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>