force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Applicable_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_Applicable_Role__c</fullName>
    <label>Applicable Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>