force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>FEC_Channel__c</referenceTo>
    <relationshipLabel>Assignments MDS</relationshipLabel>
    <relationshipName>Assignments_MDS</relationshipName>
    <type>Lookup</type>
</CustomField>