force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Editable_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_Editable_Role__c</fullName>
    <description>Đối tượng người dùng có thể chỉnh sửa trường dữ liệu</description>
    <label>Editable Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>