force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Field_Masking__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Masking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Đánh dấu là trường có masking hay không</description>
    <label>Field Masking</label>
    <type>Checkbox</type>
</CustomField>