force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Field_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tùy chọn trường Read Only trên màn hình Case</description>
    <label>Field ReadOnly</label>
    <type>Checkbox</type>
</CustomField>