force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Field_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái hiển thị của trường trên màn hình Case</description>
    <label>Field Status</label>
    <type>Checkbox</type>
</CustomField>