force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Masking_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Masking_Type__c</fullName>
    <description>Loại Masking dữ liệu</description>
    <label>Masking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile/ Phone</fullName>
            </value>
            <value>
                <fullName>National ID/ Passport</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>