force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Nature_Of_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_Of_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên bộ Nature of Case</description>
    <label>Nature of Cases</label>
    <referenceTo>FEC_Nature_of_Case__c</referenceTo>
    <relationshipLabel>Assignments MDS</relationshipLabel>
    <relationshipName>Assignments_MDS</relationshipName>
    <type>Lookup</type>
</CustomField>