force-app/main/default/objects/FEC_Assignment_MDS__c/fields/FEC_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>